--- a/config.json
+++ b/config.json
@@ -5,5 +5,6 @@
 	"hue_light_states_path": "states/lights/",
 	"hue_sensor_states_path": "states/sensors/",
 	"button_payload_path": "payloads/buttons/",
-	"mysensors_payload_path": "payloads/mysensors/"
+	"mysensors_payload_path": "payloads/mysensors/",
+	"thermostat_payload_path": "payloads/thermostat/"
 }
